# fixdates

./: .devcontainer.json  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/fixdates/: main.py
tests/: test_fixable_dates.py  test_fixable_month_names.py  test_unfixable_dates.py  test_unfixable_month_names.py  test_url.py
tests/data/: fixable_dates.csv  fixable_month_names.csv  unfixable_dates.csv  unfixable_month_names.csv
tests/reports/: unfixable_dates_failures.txt
